--- a/package.json
+++ b/package.json
@@ -19,23 +19,49 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "typecheck": "tsc --noEmit",
+    "export": "next build && next export",
+    "lint": "next lint",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
+    "storybook": "start-storybook -p 7001",
+    "storybook:build": "build-storybook"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.5",
-    "@mantine/hooks": "^4.2.5",
-    "@mantine/next": "^4.2.5",
+    "@mantine/core": "4.2.5",
+    "@mantine/dates": "4.2.5",
+    "@mantine/form": "^4.2.5",
+    "@mantine/hooks": "4.2.5",
+    "@mantine/next": "4.2.5",
+    "@mantine/notifications": "4.2.5",
+    "cookies-next": "^2.0.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tabler-icons-react": "^1.48.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "12.1.6",
+    "@next/eslint-plugin-next": "12.1.4",
+    "@testing-library/dom": "8.12.0",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "13.0.0",
+    "@testing-library/user-event": "14.0.4",
+    "@types/jest": "^27.5.1",
     "@types/node": "17.0.33",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
+    "eslint-config-mantine": "^1.1.0",
     "eslint-config-next": "12.1.6",
+    "jest": "28.1.0",
+    "prettier": "2.6.2",
+    "ts-jest": "28.0.2",
     "typescript": "4.6.4"
   }
 }
